Add charcters list

--- a/index.html
+++ b/index.html
@@ -31,25 +31,126 @@
         <div class="character-card">
           <h2>Aragorn</h2>
           <p>Race: Human</p>
-          <p>Age: 87</p>
           <p>Ring: Barahir</p>
         </div>
         <div class="character-card">
           <h2>Frodo Baggins</h2>
           <p>Race: Hobbit</p>
-          <p>Age: 33</p>
           <p>Ring: The One</p>
         </div>
         <div class="character-card">
           <h2>Gandalf</h2>
           <p>Race: Maiar</p>
-          <p>Age: 9000</p>
           <p>Ring: Narya</p>
         </div>
         <div class="character-card">
           <h2>Boromir</h2>
           <p>Race: Human</p>
-          <p>Age: 41</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Meriadoc Brandybuck</h2>
+          <p>Race: Hobbit</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Peregrin Took</h2>
+          <p>Race: Hobbit</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Samwise Gamegee</h2>
+          <p>Race: Hobbit</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Arwen</h2>
+          <p>Race: Elve</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Legolas</h2>
+          <p>Race: Elve</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Denethor</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Elrond</h2>
+          <p>Race: Elve</p>
+          <p>Ring: Vilya</p>
+        </div>
+        <div class="character-card">
+          <h2>Eomer</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Eowyn</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Faramir</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Galadriel</h2>
+          <p>Race: Elve</p>
+          <p>Ring: Nenya</p>
+        </div>
+        <div class="character-card">
+          <h2>Gimli</h2>
+          <p>Race: Dwarf</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Grima Wormtongue</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Gollum</h2>
+          <p>Race: Hobbit</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Isildur</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Saruman</h2>
+          <p>Race: Maiar</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Theoden</h2>
+          <p>Race: Human</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Grishnákh</h2>
+          <p>Race: Orc</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Uglúk</h2>
+          <p>Race: Orc</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Gothmog</h2>
+          <p>Race: Orc</p>
+          <p>Ring: N/A</p>
+        </div>
+        <div class="character-card">
+          <h2>Mog</h2>
+          <p>Race: Orc</p>
           <p>Ring: N/A</p>
         </div>
       </div>
